--- a/Index.html
+++ b/Index.html
@@ -14,6 +14,34 @@
 <li>Frango Assado, Found on the Interstate Highways</li>
 <li>Iguazu Falls, Crossing Between Brazil and Argentina</li>
 <li>Sugarloaf Mountain, Rio de Janeiro</li>
+  table, th, td {
+  border: 1px solid yellow;
+}
+</style>
+</head>
+<body>
+
+<h2>Main Cities</h2>
+<p>The 3 most well known cities in Brazil and population counts too.</p>
+
+<table style="width:100%">
+  <tr>
+    <th>Location</th>
+    <th>Population</th> 
+  </tr>
+  <tr>
+    <td>São Paulo</td>
+    <td>12.18 Million</td>
+  </tr>
+  <tr>
+    <td>Rio de janeiro</td>
+    <td>6.32 Million</td>
+  </tr>
+  <tr>
+    <td>Brasilia</td>
+    <td>2.48 Million</td>
+  </tr>
+</table>
 </ul>
 </body>
 </html>
