--- a/Index.html
+++ b/Index.html
@@ -14,12 +14,7 @@
 <li>Frango Assado, Found on the Interstate Highways</li>
 <li>Iguazu Falls, Crossing Between Brazil and Argentina</li>
 <li>Sugarloaf Mountain, Rio de Janeiro</li>
-  table, th, td {
-  border: 1px solid yellow;
-}
-</style>
-</head>
-
+ 
 <h2>Main Cities</h2>
 <p>The 3 most well known cities in Brazil and population counts too.</p>
 
@@ -41,5 +36,6 @@
     <td>2.48 Million</td>
   </tr>
 </table>
+  </body>
 </ul>
 </html>
